Fix channels alignment

--- a/app/assets/stylesheets/api/channels_index.scss
+++ b/app/assets/stylesheets/api/channels_index.scss
@@ -35,7 +35,7 @@
   .channels {
     flex-wrap: wrap;
     width: 100%;
-    justify-content: center;
+    justify-content: flex-start;
     // border: 1px solid orange;
 
     .channel-item {
