--- a/app/assets/stylesheets/api/featured_channels.scss
+++ b/app/assets/stylesheets/api/featured_channels.scss
@@ -28,7 +28,7 @@
   .channels {
     flex-wrap: wrap;
     width: 100%;
-    justify-content: center;
+    justify-content: flex-start;
     // border: 1px solid orange;
 
     .channel-item {
